--- a/src/app/game/game-new/game-new.component.css
+++ b/src/app/game/game-new/game-new.component.css
@@ -4,6 +4,7 @@
   bottom: 20px;
   transition: transform 280ms cubic-bezier(.4,0,.2,1);
   transform: scale(1);
+  z-index: 10;
 }
 .create-new-game.opened {
   transform: scale(0);
