--- a/src/app/game/game-list/game-list.component.html
+++ b/src/app/game/game-list/game-list.component.html
@@ -5,9 +5,9 @@
         {{gameType(game)}}
       </mat-panel-title>
       <mat-panel-title>
-        {{teamName(game.teams[0])}}
+        {{teamName(game.teams.red)}}
         {{scoreSummary(game)}}
-        {{teamName(game.teams[1])}}
+        {{teamName(game.teams.blue)}}
       </mat-panel-title>
     </mat-expansion-panel-header>
     <div>
