--- a/src/app/game/game-new/game-new-dialog/game-new-dialog.component.html
+++ b/src/app/game/game-new/game-new-dialog/game-new-dialog.component.html
@@ -44,6 +44,9 @@
       </div>
     </div>
   </div>
+  <div class="team team-switch">
+    <button mat-mini-fab (click)="switchTeams()"><mat-icon>cached</mat-icon></button>
+  </div>
   <div class="team team--blue" [formGroup]="teamBlue">
     <div class="team-color">
       <strong>blue</strong>
