--- a/src/app/game/game-detail/game-detail.component.scss
+++ b/src/app/game/game-detail/game-detail.component.scss
@@ -1,6 +1,16 @@
+@import '~@angular/material/theming';
+
 .go-back {
   position: absolute;
   z-index: 10;
+  top: 13px;
+  left: 13px;
+}
+.remove {
+  position: absolute;
+  z-index: 10;
+  top: 13px;
+  right: 13px;
 }
 
 .game-screen {
@@ -42,6 +52,21 @@
   width: 100%;
   height: 100%;
   margin: 0 12px;
+
+  &--red {
+    .player-goals {
+      .mat-raised-button.mat-primary {
+        background-color: map_get($mat-red, 500);
+      }
+    }
+  }
+  &--blue {
+    .player-goals {
+      .mat-raised-button.mat-primary {
+        background-color: map_get($mat-indigo, 500);
+      }
+    }
+  }
 }
 
 .player {
