--- a/src/app/game/games-stats/games-stats.component.html
+++ b/src/app/game/games-stats/games-stats.component.html
@@ -26,6 +26,31 @@
     <mat-expansion-panel>
         <mat-expansion-panel-header>
             <mat-panel-description>
+                Time summary
+            </mat-panel-description>
+        </mat-expansion-panel-header>
+        <mat-list>
+            <mat-list-item>
+                <h4 mat-line><strong>{{time.total / games.total | number}}s</strong></h4>
+                <p mat-line>average game time</p>
+            </mat-list-item>
+            <mat-list-item>
+                <h4 mat-line><strong>{{time.wins / games.wins | number}}s</strong></h4>
+                <p mat-line>average win time</p>
+            </mat-list-item>
+            <mat-list-item>
+                <h4 mat-line><strong>{{time.loses / games.loses | number}}s</strong></h4>
+                <p mat-line>average lost time</p>
+            </mat-list-item>
+            <mat-list-item>
+                <h4 mat-line><strong>{{time.total / goals.total | number}}s</strong></h4>
+                <p mat-line>average time per goal</p>
+            </mat-list-item>
+        </mat-list>
+    </mat-expansion-panel>
+    <mat-expansion-panel>
+        <mat-expansion-panel-header>
+            <mat-panel-description>
                 Positions summary
             </mat-panel-description>
         </mat-expansion-panel-header>
